--- a/PerplexIdeeenbus/wwwroot/index.html
+++ b/PerplexIdeeenbus/wwwroot/index.html
@@ -18,6 +18,7 @@
             <th>Type</th>
             <th>Begindatum</th>
             <th>Einddatum</th>
+            <th>Duur</th>
             <th>Categorieën</th>
         </tr>
         <tbody id="ideas"></tbody>
@@ -25,7 +26,7 @@
 
     <script src="js/site.js" asp-append-version="true"></script>
     <script type="text/javascript">
-        getItems();
+        getItems('');
     </script>
 </body>
 </html>
